add nlog and configure dependencies

--- a/Sequences/appsettings.json
+++ b/Sequences/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=recruitment;Username=admin;Password=P2ssw0rd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
