add api versioning

--- a/Sequences/appsettings.json
+++ b/Sequences/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=recruitment;Username=admin;Password=P2ssw0rd"
+    "DefaultConnection": "Host=localhost:54320;Database=recruitment;Username=admin;Password=P2ssw0rd"
   },
   "Logging": {
     "LogLevel": {
