add auth0 authentication

--- a/Sequences/appsettings.json
+++ b/Sequences/appsettings.json
@@ -1,5 +1,9 @@
 {
   "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "https://dev-wzur5l1a.us.auth0.com/",
+    "Audience": "https://recrutalo.com"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost:54320;Database=recruitment;Username=admin;Password=P2ssw0rd"
   },
