--- a/Sequences/Nlog.config
+++ b/Sequences/Nlog.config
@@ -10,5 +10,6 @@
   <rules>
     <logger name="*" minlevel="Info" writeTo="logconsole" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Info" writeTo="loki" />
   </rules>
 </nlog>
